# jobify

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  hosted-hunt.yml  hosted-tailor.yml  hunt.yml  tailor-manual.yml  tailor.yml
.superpowers/sdd/: final-review-fix-report.md  task-1-report.md  task-2-report.md  task-3-report.md  task-4-report.md
dashboard/: .env.local.example  .gitignore  package-lock.json  package.json  proxy.ts  site.config.ts
dashboard/app/: _internal.css  globals.css  layout.tsx  page.tsx
dashboard/scripts/: check-status-types.mjs  gen-status-types.mjs
docs/: ARCHITECTURE.md  COST_RAILS.md  KNOWN_ISSUES.md  MODULES.md  ONBOARDING.md  OPERATIONS.md  SCORING.md  SETUP.md
extension/: README.md  build.mjs  manifest.json  package-lock.json  package.json
extension/engine/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
extension/shell/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
jobify/: __init__.py  config.py  db.py  notify.py  profile_loader.py
jobify/data/: board_catalog_seed.yml
jobify/hosted/: __init__.py  board_health.py  candidates.py  discovery.py  embed.py  fanout.py  invites.py  keycrypt.py  learning.py  tailoring.py  worker.py
jobify/hunt/: .env.example  .gitignore  DATA_CONTRACT.md  README.md  __init__.py  agent.py  enricher.py  rescore.py  rubric.py  scorer.py  test_scorer.py  test_source.py
jobify/migrations/: 0001_init.sql  0002_multitenant.sql  0003_hosted_onboarding.sql  0004_worker.sql  0005_invite_claim_fn.sql  0006_cost_rails.sql  0007_hunt_cooldown.sql  0008_hunt_cycles.sql  0009_allowed_emails.sql  0010_onboarding_stage_v2.sql  0011_v3a_modules.sql  0012_v3b_tailor.sql  0013_v3c_submit.sql  0014_hunt2_funnel.sql  0015_board_catalog.sql  0016_posting_metadata.sql  0017_candidate_boards.sql  0018_board_health.sql  README.md
jobify/resume_templates/: README.md  __init__.py
jobify/shared/: __init__.py  ats_detect.py  html.py  jobid.py  liveness.py  llm.py  match_state.json  match_state.py  match_status.json  match_status.py  status.json  status.py  storage.py  validator.py
jobify/submit/: .env.example  .gitignore  README.md  __init__.py  config.py  confirm.py  handoff.py  review_packet.py  router.py  runner_legacy.py  storage.py  verify.py
jobify/tailor/: .env.example  .gitignore  DATA_CONTRACT.md  README.md  __init__.py  claims.py  paths.py  pipeline.py  storage.py  url_resolver.py
onboarding/: SKILL.md  validate_profile.py
onboarding/examples/: README.md  interview-transcript.md
onboarding/references/: file-templates.md  portals-seeding.md  stages.md  validation.md
onboarding/schema/: README.md  disqualifiers.schema.json  markdown-files.md  portals.schema.json  profile.schema.json
ops/waves/: merge-adm3.sh  merge-hunt2-a.sh  merge-hunt2-b.sh  merge-hunt2-c.sh  merge-ux1.sh  merge-ux2.sh  merge-v3c-e1.sh  merge-v3c-p0.sh  setup-adm3.sh  setup-hosted-fix1.sh  setup-hosted-int1.sh  setup-hosted-int2.sh  setup-hosted-onbv2a.sh  setup-hosted-onbv2b.sh  setup-hosted-wave1.sh  setup-hosted-wave2.sh  setup-hosted-wave3.sh  setup-hosted-wave4.sh  setup-hosted-wave5a.sh  setup-hosted-wave5b.sh  setup-hosted-wave6.sh  setup-hosted-wave7.sh  setup-hosted-wave8.sh  setup-hosted-wave9.sh  setup-hunt2-a.sh  setup-hunt2-b.sh  setup-hunt2-c.sh  setup-int2-gatefix.sh  setup-int2-merge.sh  setup-int2.sh  setup-intsim-merge.sh  setup-intsim.sh  setup-liv1.sh  setup-ux1.sh  setup-ux2.sh  setup-v3a-wave1.sh  setup-v3a-wave2.sh  setup-v3a-wave3.sh  setup-v3b-wave1.sh  setup-v3b-wave2.sh  (+2 more)
planning/: FEEDBACK_U2_2026-07-21.md  HOSTED_AGGREGATOR_PLAN.md  HUNT2_SOURCES.md  ONBOARDING_REDESIGN.md  PRODUCT_VISION.md  PROJECT_PLAN.md  UX1_DESIGN.md  V3A_DESIGN.md  V3B_DESIGN.md  V3C_DESIGN.md
planning/session-prompts/: 00_phase0_scaffold.md  01_wsA1_profile_contract.md  02_wsB_dashboard.md  03_wsC_schema_docs.md  04_wsA2_persona_audit.md  05_wsD_submit.md  06_wsE_onboarding.md  07_wsF_resume_gallery.md  08_phaseF_verify.md  09_merge_and_publish.md  10_h1_multitenant_schema.md  11_h2_profile_db_rubric.md  12_h3_onboarding_web.md  13_h4_worker_ladder.md  14_h5_feed_ui.md  15_h6_cost_rails.md  16_h7_launch.md  17_ux_design_shell.md  18_ux_landing_auth.md  19_ux_onboarding_chat.md  20_admin_panel.md  21_user_triggered_hunts.md  22_admin_system_screen.md  23_signup_allowlist.md  24_interview_v2.md  25_fix_interview_turns.md  25_interview_fixes.md  26_onbv2_backend.md  27_onbv2_shell_polish.md  28_onbv2_surface.md  30_v3a_spine.md  (+30 more)
profile/: article-digest.md  disqualifiers.yml  learned-insights.md  profile.yml  thesis.md  voice-profile.md
profile.example/: article-digest.md  cv.md  disqualifiers.yml  learned-insights.md  portals.yml  profile.yml  thesis.md  voice-profile.md
scripts/: check_profile_sync.py  mark_run.py  scrub_gate.sh  send_morning_digest.py  smoke_legacy.py
tests/: conftest.py  test_agentic_archetype.py  test_application_defaults_consistency.py  test_assisted_manual_handoff.py  test_claims.py  test_conftest_live_guard.py  test_console_scripts.py  test_db_hosted.py  test_degree_gate_materials.py  test_digest_link_ordering.py  test_h3_onboarding_doc_fixture.py  test_hosted_board_health.py  test_hosted_candidates.py  test_hosted_discovery.py  test_hosted_embed.py  test_hosted_fanout.py  test_hosted_feeders.py  test_hosted_invites.py  test_hosted_learning.py  test_hosted_tailoring.py  test_hosted_worker.py  test_hunt_backfill_links.py  test_hunt_direct_listings.py  test_hunt_jsearch_serpapi.py  test_hunt_query_gen.py  test_hunt_query_templates.py  test_hunt_rubric.py  test_hunt_scorer.py  test_hunt_sources_location_agnostic.py  test_hunt_sources_metadata.py  test_hunt_thesis.py  test_keycrypt.py  test_latex_onepage.py  test_manual_cli.py  test_manual_cli_e2e.py  test_manual_resolve.py  test_manual_scrape_ashby.py  test_manual_scrape_generic.py  test_manual_scrape_greenhouse.py  test_manual_scrape_lever.py  (+40 more)
web/: .env.example  README.md  next.config.ts  package-lock.json  package.json  proxy.ts  vitest.config.ts
(+649 files in other folders)
